Build: Extract compatibility code into separate project
This allows us to limit the scope where '--release' can't be used for compilation.